# ai-discord-gamemaster

./: .gitignore  Cargo.toml  LICENSE  README.md  Satisfactory_Assistant_config.txt  setup_discord.md  setup_openAI.md
.devcontainer/: devcontainer.json
ai-discord-gamemaster/: .clang-format  Cargo.toml
ai-discord-gamemaster/src/: main.rs
discord/: Cargo.toml
discord/src/: emoji.rs  lib.rs  reaction.rs  serenity.rs  serenity_audio.rs  serenity_report.rs
docs/: setup_discord.md  setup_openAI.md
openai_api/: Cargo.toml
openai_api/benches/: pre_prompt_by_user.rs
openai_api/src/: lib.rs  models.rs  pre_prompt_by_user.rs  run_completion.rs  text_to_speech.rs
src/: build.rs  main.rs
text_completion/: Cargo.toml
text_completion/src/: lib.rs
