[package]
name = "ai-discord-gamemaster"
version = "1.2.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serenity = { features = [
    "cache",
    "framework",
    "standard_framework",
    "voice",
    "http",
    "rustls_backend",
    "collector",
], version = "0.12" }
songbird = { version = "0.4" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tokio = { features = ["full"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
hex = "0.4"
sha2 = "0.10"
openai_api = { path = "openai_api" }
discord = { path = "discord" }

[profile.release]
opt-level = 3
lto = true          # link time optimizations
codegen-units = 16
rpath = false
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 3
debug = false
codegen-units = 512

[profile.dev]
incremental = true
opt-level = 0
strip = "none"
debug-assertions = true
overflow-checks = true
debug = true
lto = false
codegen-units = 512
rpath = false


#//MEETUP001 Other secret profile stuff??

#//MEETUP002 is there a better/standard tool to detect dependencies unused than udeps? (requiring to use nightly is annoying)
