[package]
name = "ai-discord-gamemaster"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
hyper = "0.14" 
tracing = "0.1"
tracing-subscriber = "0.3"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] } 