[package]
name = "ai-discord-gamemaster"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
hyper = "0.14" 
tracing = "0.1"
tracing-subscriber = "0.3"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model","cache","voice"] } 
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
songbird = { version = "0.4.5", features = ["serenity","driver"] } 
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "alac"] }
