[package]
name = "openai_api"
version = "1.0.0"
edition = "2021" 

[dependencies]
reqwest = { version = "0.11", features = ["json","stream"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { features = ["full"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
text_completion = { path = "../text_completion" }

#//FIXME how to detect unused dependencies?