[package]
name = "openai_api"
version = "1.0.0"
edition = "2021" 

[dependencies]
reqwest = { version = "0.11", features = ["json","stream"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { features = ["full"], version = "1" }
tracing = "0.1"
futures = "0.3"
text_completion = { path = "../text_completion" }
