[package]
name = "text_completion"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json","stream"] } 
serenity = { features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend","collector"], version = "0.12" }
songbird = {  version = "0.4" }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tokio = { features = ["full"], version = "1" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
hex = "0.4" 
sha2 = "0.10"
#//FIXME clean dependencies
